--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP Galerie ET chargement JSON</title>
 </head>
+
 <body>
   <h1>TP Galerie ET chargement JSON</h1>
   <nav>
@@ -15,4 +17,10 @@
     </ul>
   </nav>
 </body>
+<h1>Galerie</h1>
+<p>lorem⇥</p>
+<div class="overlay">
+  <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+</div>
+
 </html>
