--- a/01-galerie.html
+++ b/01-galerie.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
-<body>
+<body x-data="{
+    imagedechien : 'https://picsum.photos/id/237/400/300',
+}">
     <h1>Galerie</h1>
     <p>lorem⇥</p>
-    <div class="overlay">
-        <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+    <div class="overlay"
+    x-show="imagedechien"
+    @click="imagedechien = null"
+    @keyup.escape.window = "imagedechien = null">
+        <figure><img :src="imagedechien"></figure>
     </div>
 </body>
 
